Alteração Paragrafo index.html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     <div class="wrapper">
         <section class="container-left">
             <h1> Easy Shopping Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae velit eum cupiditate ab repellat
-                blanditiis,
-                deleniti maiores provident, placeat laudantium eveniet ducimus alias ut. Veniam voluptatibus
-                necessitatibus
-                veritatis non dolorum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt saepe sunt voluptates debitis aperiam
+            </p>
             <button>Get Started</button>
         </section>
         <section class="container-right">
